# ml-bioacoustics-signal-processing

./: CITATION.cff  README.md  gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/ml_bioacoustics/: annotation_parser.py  feature_extraction.py  io.py  main.py  models.py  pipeline.py  preprocessing.py  visualizations.py
tests/: test_smoke.py
